--- a/lib/stratosflower_landing_site_web/templates/layout/app.html.eex
+++ b/lib/stratosflower_landing_site_web/templates/layout/app.html.eex
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>StratosflowerLandingSite · Phoenix Framework</title>
+    <title>Stratosflower</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
     <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
@@ -13,15 +13,12 @@
       <section class="container">
         <nav role="navigation">
           <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-            <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
-              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
-            <% end %>
+            <li><%= link "Home", to: Routes.page_path(@conn, :index) %></li>
+            <li><%= link "Bio", to: Routes.page_path(@conn, :bio) %></li>
+            <li><%= link "Merch", to: Routes.page_path(@conn, :merch) %></li>
+            <li><%= link "Contact", to: Routes.page_path(@conn, :contact) %></li>
           </ul>
         </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
-        </a>
       </section>
     </header>
     <main role="main" class="container">
