--- a/lib/stratosflower_landing_site_web/templates/page/contact.html.eex
+++ b/lib/stratosflower_landing_site_web/templates/page/contact.html.eex
@@ -1,1 +1,2 @@
-<strong>Contact us at <i>stratosflower@gmail.com</i></strong>
+<h1>CONTACT US</h1>
+<p>Contact us at <i>stratosflower@gmail.com</i></p>
